COMMUNICATION-536 SSE requirements phase 1 Added remove zigbee mirror message Added support for emeter fw upgrade
git-svn-id: http://source.eict.vpdc/svn/labo/protocols/trunk@51345 0d108963-8a47-0410-809b-ebd9fb3b3407